Task3 refactoring